--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HovedAktivitet"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|screenSize">
+        <activity android:name=".OrdList_Frag"></activity>
+        <activity
+            android:name=".HovedAktivitet"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
